--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   easy_localization: ^3.0.0
   shared_preferences: ^2.0.13
   enum_to_string: ^2.0.1
+  azlistview: ^2.0.0
 
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
