--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,18 @@ dependencies:
   enum_to_string: ^2.0.1
   azlistview: ^2.0.0
   community_material_icon: ^5.9.55
-  mobile_scanner: ^1.0.0
+  mobile_scanner: ^1.1.1
+  encrypt: ^5.0.1
+  flutter_dotenv: ^5.0.2
+  flutter_local_notifications: ^9.4.1
 
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
   cloud_firestore: ^3.1.8
+  firebase_messaging: ^11.2.15
 
   flutter_launcher_icons: ^0.9.2
-  flutter_native_splash: ^2.1.1
+  flutter_native_splash: ^2.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -81,6 +85,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/icons/
     - assets/images/
     - assets/translations/
@@ -143,11 +148,11 @@ flutter_native_splash:
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. Currently, it is only supported for Android < v12 and iOS.
-  branding: assets/icons/branding.png
+  # branding: assets/icons/branding.png
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
-  branding_mode: bottom
+  # branding_mode: bottom
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
@@ -170,10 +175,10 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    #image: assets/android12splash.png
+    # image: assets/icons/kaga-launcher.png
 
     # App icon background color.
-    #icon_background_color: "#111111"
+    # icon_background_color: "#000000"
 
     # The image_dark parameter and icon_background_color_dark set the image and icon background
     # color when the device is in dark mode. If they are not specified, the app will use the
